<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayoutProfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorProfil"
    tools:context=".ui.neigbour_profil.ProfilActivity">

    <!--  FloatinAction Button > FAV   -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp32"
        app:layout_anchor="@id/cardView"
        app:layout_anchorGravity="end"
        app:borderWidth="@dimen/dp0"
        android:backgroundTint="@color/greyFAB"
        android:src="@drawable/ic_star_border_white_24dp"
        android:contentDescription="@string/add_to_favorite" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--   Image User -->
        <ImageView
            android:id="@+id/imageViewProfil"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/imageUser" />

        <!-- ToolBar transparent -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarProfil"
            android:theme="@style/AppTheme.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <!--TextView White-->
        <TextView
            android:id="@+id/namenNeighbourWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp230"
            android:layout_marginStart="@dimen/dp10"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp25"
            android:textStyle="bold"
            app:layout_anchor="@id/imageViewProfil"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewProfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675" />

        <!--  Card View - About Neighbour Top-->
        <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp10"
        app:cardElevation="@dimen/dp4"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfil">

        <TextView
            android:id="@+id/namenNeighbourBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginStart="@dimen/dp15"
            android:textSize="@dimen/sp25"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0.5"
                android:layout_marginTop="@dimen/dp52"
                android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/localisationNeighbour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="@dimen/dp60"
            android:layout_marginStart="@dimen/dp10"
            android:drawableStart="@drawable/ic_position_pink_24dp"
            android:drawablePadding="@dimen/dp5"/>

        <TextView
            android:id="@+id/phoneNeighbour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="@dimen/dp105"
            android:layout_marginStart="@dimen/dp10"
            android:drawableStart="@drawable/ic_call_pink_24dp"
            android:drawablePadding="@dimen/dp5"/>

            <TextView
            android:id="@+id/siteNeighbour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:layout_marginTop="@dimen/dp150"
            android:layout_marginStart="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp5"
            android:drawableStart="@drawable/ic_link_pink_24dp"
            android:drawablePadding="@dimen/dp5"/>

    </androidx.cardview.widget.CardView>

    <!--  Card View - About Neighbour Bottom-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/dp10"
        app:cardElevation="@dimen/dp4"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/aboutNeighbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginStart="@dimen/dp10"
            android:text="@string/aboutMe"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0.5"
            android:layout_marginTop="@dimen/dp52"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/descriptionNeighbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp60"
            android:layout_marginStart="@dimen/dp10"
            android:text="@string/description" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
